tried to fix the .hero h1 alignment

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -31,7 +31,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--primary-color);
-    padding: 20px 20px 20px 1px;
+    padding: 20px;
+    font-size: 1.5rem;
 }
 
 header {
@@ -128,7 +129,7 @@ nav a:hover {
 }
 
 .history-image {
-    padding: 20px;
+    padding: 25px;
 }
 
 .section2 {
